Changes for 2.2.12rc1

New features:
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
A.F....... [ZBX-1357] more details to README file about how to add new language (zalex_ua)
A......... [ZBX-10150] fixed "countOutput" calculation in screen.get API method (Gunars)
..F....... [ZBX-10170] fixed column names vertical rotation in Firefox v43 (Gunars)
.......PS. [ZBX-9904] fixed server response when active proxy sends in historical data, info string was missing (gleb)
...G...PS. [ZBX-10219] fixed pointer type in sizeof() (gleb)
...G...... [ZBX-10177] fixed resource leak in sensor[] on Linux kernel versions 2.6 and higher (gleb)
....I..... [ZBX-10154] improved sender.pl script to take advantage of buffering (increases performance and makes communication with daemons more robust) (gleb)
........S. [ZBX-10138] fixed action based host removal when hosts to be deleted have host prototypes (gleb)
........S. [ZBX-10064] fixed history cache synchronisation with database on shutdown (viktors, wiper)
........S. [ZBX-9458] fixed low level discovery macro substitution in calculated item formulas (wiper)
..F....... [ZBX-10110] fixed using Japanese in global search (Gunars)
..F....... [ZBX-10099] fixed buffer flushing error when executing script on a host (Gunars)
..F....... [ZBX-10077] fixed deleting of profile data for current user (Gunars)
...G...... [ZBX-10126] fixed compilation error in sensors.c on Linux 2.4 kernels (gleb)
........S. [ZBX-10084] fixed removing trigger-related network map elements (viktors)
........S. [ZBX-9928] fixed triple SMS being sent by single action with Cinterion MC35i modem (wiper)
.......PS. [ZBX-9931] removed 2KB item key length limitation when sent to agent (viktors)
...G...... [ZBX-9932] removed 1KB zabbix_get item key length limitation (viktors)
..F....... [ZBX-9820] fixed overview of items and triggers with same name and multiple hosts (Gunars, Sasha)
